@@ -40,6 +40,7 @@ endif::[]
 for more details) - {pull}1009[#1009]
 * Add support for log correlation for log4j and log4j2, even when not used in combination with slf4j.
   See <<supported-logging-frameworks>> for details.
+* `Span#captureException` and `Transaction#captureException` in public Api return reported error id. - {pull}[#1015]
 
 [float]
 ===== Bug Fixes
